--- a/Notebooks/Trainer.ipynb
+++ b/Notebooks/Trainer.ipynb
@@ -29,20 +29,8 @@
     }
    },
    "cell_type": "code",
-   "source": "from Model.CNN_3layer import CNN_3L",
-   "id": "3a62346bb40ddca9",
-   "outputs": [],
-   "execution_count": 60
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-23T11:29:50.312269Z",
-     "start_time": "2025-02-23T11:29:42.836994Z"
-    }
-   },
-   "cell_type": "code",
    "source": [
+    "from Model.CNN_3layer import CNN_3L\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from Model.CNN_3L_pro import *\n",
@@ -103,22 +91,9 @@
     "\n",
     "print(\"done training !\")"
    ],
-   "id": "e52f6c9c91a519a0",
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Error(s) in loading state_dict for CNN_Pro:\n\tMissing key(s) in state_dict: \"conv4.weight\", \"conv4.bias\", \"bn4.weight\", \"bn4.bias\", \"bn4.running_mean\", \"bn4.running_var\". \n\tsize mismatch for conv1.weight: copying a param with shape torch.Size([32, 1, 3, 3]) from checkpoint, the shape in current model is torch.Size([32, 1, 5, 5]).\n\tsize mismatch for fc1.weight: copying a param with shape torch.Size([256, 32768]) from checkpoint, the shape in current model is torch.Size([512, 4096]).\n\tsize mismatch for fc1.bias: copying a param with shape torch.Size([256]) from checkpoint, the shape in current model is torch.Size([512]).\n\tsize mismatch for fc2.weight: copying a param with shape torch.Size([129, 256]) from checkpoint, the shape in current model is torch.Size([129, 512]).",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[62], line 16\u001B[0m\n\u001B[1;32m     14\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mexists(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcheckpoint.pth\u001B[39m\u001B[38;5;124m\"\u001B[39m):       \n\u001B[1;32m     15\u001B[0m     checkpoint \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mload(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcheckpoint.pth\u001B[39m\u001B[38;5;124m\"\u001B[39m,weights_only\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, map_location\u001B[38;5;241m=\u001B[39mdevice)\n\u001B[0;32m---> 16\u001B[0m     \u001B[43mmodel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload_state_dict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcheckpoint\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mmodel_state_dict\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     17\u001B[0m     optimizer\u001B[38;5;241m.\u001B[39mload_state_dict(checkpoint[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124moptimizer_state_dict\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m     19\u001B[0m \u001B[38;5;66;03m# Huấn luyện từng file một\u001B[39;00m\n",
-      "File \u001B[0;32m/opt/anaconda3/envs/ndyduc/lib/python3.12/site-packages/torch/nn/modules/module.py:2584\u001B[0m, in \u001B[0;36mModule.load_state_dict\u001B[0;34m(self, state_dict, strict, assign)\u001B[0m\n\u001B[1;32m   2576\u001B[0m         error_msgs\u001B[38;5;241m.\u001B[39minsert(\n\u001B[1;32m   2577\u001B[0m             \u001B[38;5;241m0\u001B[39m,\n\u001B[1;32m   2578\u001B[0m             \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mMissing key(s) in state_dict: \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m. \u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(\n\u001B[1;32m   2579\u001B[0m                 \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m, \u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mjoin(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mk\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m k \u001B[38;5;129;01min\u001B[39;00m missing_keys)\n\u001B[1;32m   2580\u001B[0m             ),\n\u001B[1;32m   2581\u001B[0m         )\n\u001B[1;32m   2583\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(error_msgs) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[0;32m-> 2584\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\n\u001B[1;32m   2585\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mError(s) in loading state_dict for \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m:\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(\n\u001B[1;32m   2586\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__class__\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mjoin(error_msgs)\n\u001B[1;32m   2587\u001B[0m         )\n\u001B[1;32m   2588\u001B[0m     )\n\u001B[1;32m   2589\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
-      "\u001B[0;31mRuntimeError\u001B[0m: Error(s) in loading state_dict for CNN_Pro:\n\tMissing key(s) in state_dict: \"conv4.weight\", \"conv4.bias\", \"bn4.weight\", \"bn4.bias\", \"bn4.running_mean\", \"bn4.running_var\". \n\tsize mismatch for conv1.weight: copying a param with shape torch.Size([32, 1, 3, 3]) from checkpoint, the shape in current model is torch.Size([32, 1, 5, 5]).\n\tsize mismatch for fc1.weight: copying a param with shape torch.Size([256, 32768]) from checkpoint, the shape in current model is torch.Size([512, 4096]).\n\tsize mismatch for fc1.bias: copying a param with shape torch.Size([256]) from checkpoint, the shape in current model is torch.Size([512]).\n\tsize mismatch for fc2.weight: copying a param with shape torch.Size([129, 256]) from checkpoint, the shape in current model is torch.Size([129, 512])."
-     ]
-    }
-   ],
-   "execution_count": 62
+   "id": "3a62346bb40ddca9",
+   "outputs": [],
+   "execution_count": 60
   },
   {
    "metadata": {
@@ -208,12 +183,181 @@
    "execution_count": null
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-18T08:15:22.618027Z",
+     "start_time": "2025-03-18T08:15:22.058231Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import librosa\n",
+    "import numpy as np\n",
+    "\n",
+    "y, sr = librosa.load(\"../Data/MusicNet_Dataset/musicnet/musicnet/test_data/2628.wav\")\n",
+    "\n",
+    "# Phát hiện beat và downbeat\n",
+    "tempo, beats = librosa.beat.beat_track(y=y, sr=sr)\n",
+    "onset_env = librosa.onset.onset_strength(y=y, sr=sr)\n",
+    "\n",
+    "# Chuyển beats thành thời gian\n",
+    "beat_times = librosa.frames_to_time(beats, sr=sr)\n",
+    "\n",
+    "if len(beat_times) > 1:\n",
+    "    # Tính khoảng cách giữa các beats\n",
+    "    beat_intervals = np.diff(beat_times)\n",
+    "    # Tìm khoảng cách phổ biến nhất giữa các beats mạnh\n",
+    "    avg_interval = np.median(beat_intervals)\n",
+    "\n",
+    "    # Xác định nhịp theo độ lặp lại của downbeat\n",
+    "    if avg_interval < 0.4:  # Nếu khoảng cách nhỏ (thường là 3 beats trong 1 chu kỳ)\n",
+    "        time_signature = \"3/4\"\n",
+    "    else:  # Nếu khoảng cách lớn hơn (thường là 4 beats trong 1 chu kỳ)\n",
+    "        time_signature = \"4/4\"\n",
+    "else:\n",
+    "    time_signature = \"Không xác định\"\n",
+    "\n",
+    "# In kết quả\n",
+    "print(f\"Tempo: {tempo[0]:.2f} BPM\")\n",
+    "print(f\"Ước lượng nhịp: {time_signature}\")"
+   ],
+   "id": "3d5d7c93f6ad5090",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo: 99.38 BPM\n",
+      "Ước lượng nhịp: 4/4\n"
+     ]
+    }
+   ],
+   "execution_count": 90
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-18T08:58:24.001589Z",
+     "start_time": "2025-03-18T08:55:28.615664Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import librosa\n",
+    "import glob\n",
+    "import numpy as np\n",
+    "\n",
+    "path = \"../Data/MusicNet_Dataset/musicnet/musicnet/train_data/*.wav\"\n",
+    "\n",
+    "files = glob.glob(path)\n",
+    "\n",
+    "unique_tempos = set()\n",
+    "\n",
+    "for file in files:\n",
+    "    y, sr = librosa.load(file)\n",
+    "    tempo, _ = librosa.beat.beat_track(y=y, sr=sr)\n",
+    "    tempo = tempo[0] if tempo.ndim > 0 else tempo\n",
+    "    # Thêm tempo vào tập hợp\n",
+    "    unique_tempos.add(round(tempo, 2))\n",
+    "\n",
+    "print(\"Các tempo duy nhất:\")\n",
+    "for t in sorted(unique_tempos):\n",
+    "    print(f\"{t}, \")"
+   ],
+   "id": "fadc723e2060a8e3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Các tempo duy nhất:\n",
+      "60.09, \n",
+      "63.02, \n",
+      "66.26, \n",
+      "68.0, \n",
+      "69.84, \n",
+      "73.83, \n",
+      "78.3, \n",
+      "80.75, \n",
+      "83.35, \n",
+      "86.13, \n",
+      "89.1, \n",
+      "92.29, \n",
+      "95.7, \n",
+      "99.38, \n",
+      "103.36, \n",
+      "107.67, \n",
+      "112.35, \n",
+      "117.45, \n",
+      "123.05, \n",
+      "129.2, \n",
+      "136.0, \n",
+      "143.55, \n",
+      "152.0, \n",
+      "161.5, \n",
+      "172.27, \n",
+      "184.57, \n",
+      "198.77, \n",
+      "215.33, \n",
+      "234.91, \n"
+     ]
+    }
+   ],
+   "execution_count": 91
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T17:24:15.841231Z",
+     "start_time": "2025-03-17T17:24:15.822928Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import mido\n",
+    "import glob\n",
+    "\n",
+    "path = \"../Data/MusicNet_Dataset/musicnet_midis/musicnet_midis/Bach/2302_fugue5.mid\"\n",
+    "\n",
+    "files = glob.glob(path)\n",
+    "\n",
+    "unique_time_signatures = set()\n",
+    "\n",
+    "for file in files:\n",
+    "    try:\n",
+    "        midi = mido.MidiFile(file, clip=True)  # clip=True giúp bỏ qua giá trị không hợp lệ\n",
+    "        for track in midi.tracks:\n",
+    "            for msg in track:\n",
+    "                if msg.type == 'time_signature':\n",
+    "                    time_sig = f\"{msg.numerator}/{msg.denominator}\"\n",
+    "                    unique_time_signatures.add(time_sig)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Lỗi khi đọc file {file}: {e}\")\n",
+    "\n",
+    "print(\"Các nhịp có trong dữ liệu MIDI:\")\n",
+    "for ts in sorted(unique_time_signatures):\n",
+    "    print(ts)"
+   ],
+   "id": "b4aec81a4997b6ea",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Các nhịp có trong dữ liệu MIDI:\n",
+      "4/4\n"
+     ]
+    }
+   ],
+   "execution_count": 87
+  },
+  {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
-   "id": "26c966a9bce0dfc9",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "54af5383d8a99fa7"
   }
  ],
  "metadata": {
