--- a/Notebooks/BiLSTM.ipynb
+++ b/Notebooks/BiLSTM.ipynb
@@ -22,7 +22,7 @@
     "wav_files, csv_files = [], []\n",
     "\n",
     "# Tạo model & optimizer\n",
-    "model = LSTM().to(device)\n",
+    "model = BiLSTM().to(device)\n",
     "criterion = nn.BCELoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)\n",
     "\n",
@@ -4293,7 +4293,7 @@
     "csv_file = \"../Data/MusicNet_Dataset/musicnet/musicnet/train_labels/2243.csv\"\n",
     "\n",
     "# Khởi tạo model & optimizer\n",
-    "model = LSTM().to(device)\n",
+    "model = BiLSTM().to(device)\n",
     "criterion = nn.BCELoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)\n",
     "\n",
@@ -4369,7 +4369,7 @@
     "state_dict_path = \"../Trained/BiLSTM_state_dict.pth\"\n",
     "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
     "\n",
-    "model = LSTM().to(device)\n",
+    "model = BiLSTM().to(device)\n",
     "model.load_state_dict(torch.load(state_dict_path, map_location=device))\n",
     "model.eval()  # Chuyển sang chế độ đánh giá\n",
     "\n",
@@ -4468,7 +4468,7 @@
     "# Khởi tạo model và load trọng số\n",
     "state_dict_path = \"../Trained/BiLSTM_lossdown.pth\"\n",
     "\n",
-    "model = LSTM().to(device)\n",
+    "model = BiLSTM().to(device)\n",
     "model.load_state_dict(torch.load(state_dict_path, map_location=device))\n",
     "model.eval()  # Chuyển sang chế độ đánh giá\n",
     "\n",
@@ -4538,7 +4538,7 @@
     "# Khởi tạo model và load trọng số\n",
     "state_dict_path = \"../Trained/BiLSTM.pth\"\n",
     "\n",
-    "model = LSTM().to(device)\n",
+    "model = BiLSTM().to(device)\n",
     "model.load_state_dict(torch.load(state_dict_path, map_location=device))\n",
     "model.eval()  # Chuyển sang chế độ đánh giá\n",
     "\n",
@@ -4608,7 +4608,7 @@
     "# Khởi tạo model và load trọng số\n",
     "state_dict_path = \"../Trained/BiLSTM_512.pth\"\n",
     "\n",
-    "model = LSTM().to(device)\n",
+    "model = BiLSTM().to(device)\n",
     "model.load_state_dict(torch.load(state_dict_path, map_location=device))\n",
     "model.eval()  # Chuyển sang chế độ đánh giá\n",
     "\n",
@@ -4682,7 +4682,7 @@
     "\n",
     "# Load model\n",
     "checkpoint_path = \"../Trained/BiLSTM_full.pth\"\n",
-    "model = LSTM().to(device)\n",
+    "model = BiLSTM().to(device)\n",
     "\n",
     "if os.path.exists(checkpoint_path):\n",
     "    checkpoint = torch.load(checkpoint_path, map_location=device)\n",
